Bug 446803 - Tags don't get listed for a deleted resource in resource manager after a restart
Summary: Tags don't get listed for a deleted resource in resource manager after a restart
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-10 20:35 UTC by sh_zam
Modified: 2021-12-15 12:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sh_zam 2021-12-10 20:35:35 UTC
STEPS TO REPRODUCE
1. Delete a tagged resource in resource manager.
2. Close and reopen Krita
3. Navigate to the deleted resource in the resource manager.

OBSERVED RESULT
There are no tags listed for the resource. Even after undeleting. You can still filter the resource in the preset chooser, but not in resource manager.

A workaround seems to be, if you add a new tag after Undeleting the resource. It lists all the other tags. 

EXPECTED RESULT
Tags should loaded even for deleted resources or loaded upon Undeleting.


ADDITIONAL INFORMATION
Krita Version: ./krita-5.0.0-beta5-e18c9f0-x86_64.appimage
Comment 1 Eoin O'Neill 2021-12-15 01:08:12 UTC
Git commit 244048c6b5d0ea0f16ae5ea42f3fb05e1294d1bd by Eoin O'Neill.
Committed on 15/12/2021 at 01:07.
Pushed by eoinoneill into branch 'krita/5.0'.

Tags will properly display for 'deleted' inactive resources..

M  +1    -0    plugins/extensions/resourcemanager/wdgtagselection.cpp

https://invent.kde.org/graphics/krita/commit/244048c6b5d0ea0f16ae5ea42f3fb05e1294d1bd
Comment 2 Dmitry Kazakov 2021-12-15 12:36:34 UTC
Git commit bae885ee9f9b949d9607f52c1f3b5a95b766bf98 by Dmitry Kazakov, on behalf of Eoin O'Neill.
Committed on 15/12/2021 at 12:35.
Pushed by dkazakov into branch 'master'.

Tags will properly display for 'deleted' inactive resources..

M  +1    -0    plugins/extensions/resourcemanager/wdgtagselection.cpp

https://invent.kde.org/graphics/krita/commit/bae885ee9f9b949d9607f52c1f3b5a95b766bf98