Tags will properly display for 'deleted' inactive resources..

BUG:446803